--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                     </ul>
                 </address>
             </div>
-            <!-- <div class="footer-right-part">
+            <div class="footer-right-part">
                 <h2 class="join-link">
                     Приєднуйтесь
                 </h2>
@@ -332,7 +332,7 @@
                         </a>
                     </li>
                 </ul>
-            </div> -->
+            </div>
         </div>
     </footer>
 </body>
