--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
                 </h2>
                     <ul class="flex-items">
                         <li class="benefit-card">
-                            <!-- <img src="./images/icons/benefit-1.svg" alt="Іконка радіолокатора" width="270"> -->
+                            <div class="benefit-container">
+                                <svg class="benefit-icon">
+                                    <use href="./images/for-sprite/sprite.svg#benefit-1"></use>
+                                </svg>
+                            </div>
                             <h3 class="advantages">
                                 Увага до деталей
                             </h3>
@@ -75,21 +79,33 @@
                             </p>
                         </li>
                         <li class="benefit-card">
-                            <!-- <img src="./images/icons/benefit-2.svg" alt="Іконка годинника" width="270"> -->
+                            <div class="benefit-container">
+                                <svg class="benefit-icon">
+                                    <use href="./images/for-sprite/sprite.svg#benefit-2"></use>
+                                </svg>
+                            </div>
                             <h3 class="advantages">
                                 Пунктуальність
                             </h3>
                             <p class="advantages-paragraph">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                         </li>
                         <li class="benefit-card">
-                            <!-- <img src="./images/icons/benefit-3.svg" alt="Іконка монітора" width="270"> -->
+                            <div class="benefit-container">
+                                <svg class="benefit-icon">
+                                    <use href="./images/for-sprite/sprite.svg#benefit-3"></use>
+                                </svg>
+                            </div>
                             <h3 class="advantages">
                                 Планування
                             </h3>
                             <p class="advantages-paragraph">Так само консультація з широким активом значною мірою зумовлює.</p>
                         </li>
                         <li class="benefit-card">
-                            <!-- <img src="./images/icons/benefit-4.svg" alt="Іконка астроновта" width="270"> -->
+                            <div class="benefit-container">
+                                <svg class="benefit-icon">
+                                    <use href="./images/for-sprite/sprite.svg#benefit-4"></use>
+                                </svg>
+                            </div>
                             <h3 class="advantages">
                                 Сучасні технології
                             </h3>
