--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
                             <svg class="mail-icon">
                                 <use href="./images/for-sprite/sprite.svg#mail"></use>
                             </svg>
-                            info@devstudio.com</a>
+                            info@devstudio.com
+                        </a>
                     </li>
                     <li class="address-item">
                         <a class="link-address" href="tel:+380961111111">
                             <svg class="phone-icon">
                                 <use href="./images/for-sprite/sprite.svg#phone"></use>
-                            </svg>+38 096 111 11 11</a>
+                            </svg>+38 096 111 11 11
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -69,7 +71,7 @@
                         <li class="benefit-card">
                             <div class="benefit-container">
                                 <svg class="benefit-icon">
-                                    <use href="./images/for-sprite/sprite.svg#benefit-1"></use>
+                                    <use href="./images/for-sprite/sprite.svg#icon-benefit-1"></use>
                                 </svg>
                             </div>
                             <h3 class="advantages">
@@ -81,7 +83,7 @@
                         <li class="benefit-card">
                             <div class="benefit-container">
                                 <svg class="benefit-icon">
-                                    <use href="./images/for-sprite/sprite.svg#benefit-2"></use>
+                                    <use href="./images/for-sprite/sprite.svg#icon-benefit-2"></use>
                                 </svg>
                             </div>
                             <h3 class="advantages">
@@ -92,7 +94,7 @@
                         <li class="benefit-card">
                             <div class="benefit-container">
                                 <svg class="benefit-icon">
-                                    <use href="./images/for-sprite/sprite.svg#benefit-3"></use>
+                                    <use href="./images/for-sprite/sprite.svg#icon-benefit-3"></use>
                                 </svg>
                             </div>
                             <h3 class="advantages">
@@ -103,7 +105,7 @@
                         <li class="benefit-card">
                             <div class="benefit-container">
                                 <svg class="benefit-icon">
-                                    <use href="./images/for-sprite/sprite.svg#benefit-4"></use>
+                                    <use href="./images/for-sprite/sprite.svg#icon-benefit-4"></use>
                                 </svg>
                             </div>
                             <h3 class="advantages">
