--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         </section> -->
     </main>
     <footer class="footer-address">
-        <div class="container">
+        <div class="container footer-container">
             <div class="footer-left-part">
                 <a href="./index.html"><span class="logo">Web</span><span class="logo logo-third-part">Studio</span></a>
                 <address class="footer-list">
