--- a/index.html
+++ b/index.html
@@ -147,29 +147,37 @@
                                 Ігор Дем'яненко
                             </h3>
                             <p class="profession-worker">Product Designer</p>
+                            <ul class="flex-items box-media">
+                                <li class="social-list">
+                                    <a href="#" class="link-networks">
+                                        <svg class="social-networks">
+                                            <use href="./images/for-sprite/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list">
+                                    <a href="#" class="link-networks">
+                                        <svg class="social-networks">
+                                            <use href="./images/for-sprite/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list">
+                                    <a href="#" class="link-networks">
+                                        <svg class="social-networks">
+                                            <use href="./images/for-sprite/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list">
+                                    <a href="#" class="link-networks">
+                                        <svg class="social-networks">
+                                            <use href="./images/for-sprite/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
-                        <!-- <ul class="flex-items box-media">
-                            <li class="social-list">
-                                <a href="#">
-                                    <img src="./images/icons/social-network-1.svg" alt="Посилання на Інстаграм" width="44">
-                                </a>
-                            </li>
-                            <li class="social-list">
-                                <a href="#">
-                                    <img src="./images/icons/social-network-2.svg" alt="Посилання на Твіттер" width="44">
-                                </a>
-                            </li>
-                            <li class="social-list">
-                                <a href="#">
-                                    <img src="./images/icons/social-network-3.svg" alt="Посилання на Фейсбук" width="44">
-                                </a>
-                            </li>
-                            <li class="social-list">
-                                <a href="#">
-                                    <img src="./images/icons/social-network-4.svg" alt="Посилання на Лінкедін">
-                                </a>
-                            </li>
-                        </ul> -->
                     </li>
                     <li class="worker-list">
                         <img src="./images/worker-2.jpg" alt="Працівниця в окулярах в чорному жакеті" width="270">
@@ -178,29 +186,37 @@
                                 Ольга Рєпіна
                             </h3>
                             <p class="profession-worker">Frontend Developer</p>
+                            <ul class="flex-items box-media">
+                                <li class="social-list">
+                                    <a href="#" class="link-networks">
+                                        <svg class="social-networks">
+                                            <use href="./images/for-sprite/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list">
+                                    <a href="#" class="link-networks">
+                                        <svg class="social-networks">
+                                            <use href="./images/for-sprite/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list">
+                                    <a href="#" class="link-networks">
+                                        <svg class="social-networks">
+                                            <use href="./images/for-sprite/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list">
+                                    <a href="#" class="link-networks">
+                                        <svg class="social-networks">
+                                            <use href="./images/for-sprite/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
-                        <!-- <ul class="flex-items box-media">
-                            <li class="social-list">
-                                <a href="#">
-                                    <img src="./images/icons/social-network-1.svg" alt="Посилання на Інстаграм" width="44">
-                                </a>
-                            </li>
-                            <li class="social-list">
-                                <a href="#">
-                                    <img src="./images/icons/social-network-2.svg" alt="Посилання на Твіттер" width="44">
-                                </a>
-                            </li>
-                            <li class="social-list">
-                                <a href="#">
-                                    <img src="./images/icons/social-network-3.svg" alt="Посилання на Фейсбук" width="44">
-                                </a>
-                            </li>
-                            <li class="social-list">
-                                <a href="#">
-                                    <img src="./images/icons/social-network-4.svg" alt="Посилання на Лінкедін">
-                                </a>
-                            </li>
-                        </ul> -->
                     </li>
                     <li class="worker-list">
                         <img src="./images/worker-3.jpg" alt="Працівник в білій сорочці" width="270">
@@ -209,29 +225,37 @@
                                 Микола Тарасов
                             </h3>
                             <p class="profession-worker">Marketing</p>
+                            <ul class="flex-items box-media">
+                                <li class="social-list">
+                                    <a href="#" class="link-networks">
+                                        <svg class="social-networks">
+                                            <use href="./images/for-sprite/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list">
+                                    <a href="#" class="link-networks">
+                                        <svg class="social-networks">
+                                            <use href="./images/for-sprite/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list">
+                                    <a href="#" class="link-networks">
+                                        <svg class="social-networks">
+                                            <use href="./images/for-sprite/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list">
+                                    <a href="#" class="link-networks">
+                                        <svg class="social-networks">
+                                            <use href="./images/for-sprite/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
-                        <!-- <ul class="flex-items box-media">
-                            <li class="social-list">
-                                <a href="#">
-                                    <img src="./images/icons/social-network-1.svg" alt="Посилання на Інстаграм" width="44">
-                                </a>
-                            </li>
-                            <li class="social-list">
-                                <a href="#">
-                                    <img src="./images/icons/social-network-2.svg" alt="Посилання на Твіттер" width="44">
-                                </a>
-                            </li>
-                            <li class="social-list">
-                                <a href="#">
-                                    <img src="./images/icons/social-network-3.svg" alt="Посилання на Фейсбук" width="44">
-                                </a>
-                            </li>
-                            <li class="social-list">
-                                <a href="#">
-                                    <img src="./images/icons/social-network-4.svg" alt="Посилання на Лінкедін">
-                                </a>
-                            </li>
-                        </ul> -->
                     </li>
                     <li class="worker-list">
                         <img src="./images/worker-4.jpg" alt="Працівник в окулярах в чорній футболці" width="270">
@@ -240,29 +264,37 @@
                                 Михайло Єрмаков
                             </h3>
                             <p class="profession-worker">UI Designer</p>
+                            <ul class="flex-items box-media">
+                                <li class="social-list">
+                                    <a href="#" class="link-networks">
+                                        <svg class="social-networks">
+                                            <use href="./images/for-sprite/sprite.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list">
+                                    <a href="#" class="link-networks">
+                                        <svg class="social-networks">
+                                            <use href="./images/for-sprite/sprite.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list">
+                                    <a href="#" class="link-networks">
+                                        <svg class="social-networks">
+                                            <use href="./images/for-sprite/sprite.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list">
+                                    <a href="#" class="link-networks">
+                                        <svg class="social-networks">
+                                            <use href="./images/for-sprite/sprite.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
-                        <!-- <ul class="flex-items box-media">
-                            <li class="social-list">
-                                <a href="#">
-                                    <img src="./images/icons/social-network-1.svg" alt="Посилання на Інстаграм" width="44">
-                                </a>
-                            </li>
-                            <li class="social-list">
-                                <a href="#">
-                                    <img src="./images/icons/social-network-2.svg" alt="Посилання на Твіттер" width="44">
-                                </a>
-                            </li>
-                            <li class="social-list">
-                                <a href="#">
-                                    <img src="./images/icons/social-network-3.svg" alt="Посилання на Фейсбук" width="44">
-                                </a>
-                            </li>
-                            <li class="social-list">
-                                <a href="#">
-                                    <img src="./images/icons/social-network-4.svg" alt="Посилання на Лінкедін" width="44">
-                                </a>
-                            </li>
-                        </ul> -->
                     </li>
                 </ul>
             </div>
