--- a/index.html
+++ b/index.html
@@ -360,25 +360,33 @@
                 <h2 class="join-link">
                     Приєднуйтесь
                 </h2>
-                <ul class="flex-items">
+                <ul class="flex-items box-media">
                     <li class="social-list">
-                        <a href="#">
-                            <img src="./images/icons/social-network-footer-1.svg" alt="Посилання на Інстаграм" width="44">
+                        <a href="#" class="link-networks">
+                            <svg class="social-networks">
+                                <use href="./images/for-sprite/sprite.svg#icon-instagram"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="social-list">
-                        <a href="#">
-                            <img src="./images/icons/social-network-footer-2.svg" alt="Посилання на Твіттер" width="44">
+                        <a href="#" class="link-networks">
+                            <svg class="social-networks">
+                                <use href="./images/for-sprite/sprite.svg#icon-twitter"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="social-list">
-                        <a href="#">
-                            <img src="./images/icons/social-network-footer-3.svg" alt="Посилання на Фейсбук" width="44">
+                        <a href="#" class="link-networks">
+                            <svg class="social-networks">
+                                <use href="./images/for-sprite/sprite.svg#icon-facebook"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="social-list">
-                        <a href="#">
-                            <img src="./images/icons/social-network-footer-4.svg" alt="Посилання на Лінкедін" width="44">
+                        <a href="#" class="link-networks">
+                            <svg class="social-networks">
+                                <use href="./images/for-sprite/sprite.svg#icon-linkedin"></use>
+                            </svg>
                         </a>
                     </li>
                 </ul>
