--- a/index.html
+++ b/index.html
@@ -361,30 +361,30 @@
                     Приєднуйтесь
                 </h2>
                 <ul class="flex-items box-media">
-                    <li class="social-list">
-                        <a href="#" class="link-networks">
-                            <svg class="social-networks">
+                    <li class="social-list-footer">
+                        <a href="#" class="link-networks-footer">
+                            <svg class="social-networks-footer">
                                 <use href="./images/for-sprite/sprite.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-list">
-                        <a href="#" class="link-networks">
-                            <svg class="social-networks">
+                   <li class="social-list-footer">
+                        <a href="#" class="link-networks-footer">
+                            <svg class="social-networks-footer">
                                 <use href="./images/for-sprite/sprite.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-list">
-                        <a href="#" class="link-networks">
-                            <svg class="social-networks">
+                    <li class="social-list-footer">
+                        <a href="#" class="link-networks-footer">
+                            <svg class="social-networks-footer">
                                 <use href="./images/for-sprite/sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-list">
-                        <a href="#" class="link-networks">
-                            <svg class="social-networks">
+                    <li class="social-list-footer">
+                        <a href="#" class="link-networks-footer">
+                            <svg class="social-networks-footer">
                                 <use href="./images/for-sprite/sprite.svg#icon-linkedin"></use>
                             </svg>
                         </a>
