--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                 <h2 class="join-link">
                     Приєднуйтесь
                 </h2>
-                <ul class="flex-items box-media">
+                <ul class="flex-items box-media-footer">
                     <li class="social-list-footer">
                         <a href="#" class="link-networks-footer">
                             <svg class="social-networks-footer">
