--- a/index.html
+++ b/index.html
@@ -299,43 +299,55 @@
                 </ul>
             </div>
         </section>
-        <!-- <section class="section">
+        <section class="section">
             <div class="container">
                 <h2 class="clients-title">Постійні клієнти</h2>
                 <ul class="flex-items box-clients">
-                    <li>
-                        <a href="#">
-                            <img src="./images/icons/client-1.svg" alt="Компанія №1" width="170">
+                    <li class="clients-company">
+                        <a href="#" class="link-company">
+                            <svg class="client-icon">
+                                <use href="./images/for-sprite/sprite.svg#icon-company-1"></use>
+                            </svg>
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
-                            <img src="./images/icons/client-2.svg" alt="Компанія №2" width="170">
+                    <li class="clients-company">
+                        <a href="#" class="link-company">
+                            <svg class="client-icon">
+                                <use href="./images/for-sprite/sprite.svg#icon-company-2"></use>
+                            </svg>
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
-                            <img src="./images/icons/client-3.svg" alt="Компанія №3" width="170">
+                    <li class="clients-company">
+                        <a href="#" class="link-company">
+                            <svg class="client-icon">
+                                <use href="./images/for-sprite/sprite.svg#icon-company-3"></use>
+                            </svg>
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
-                            <img src="./images/icons/client-4.svg" alt="Компанія №4" width="170">
+                    <li class="clients-company">
+                        <a href="#" class="link-company">
+                            <svg class="client-icon">
+                                <use href="./images/for-sprite/sprite.svg#icon-company-4"></use>
+                            </svg>
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
-                            <img src="./images/icons/client-5.svg" alt="Компанія №5" width="170">
+                    <li class="clients-company">
+                        <a href="#" class="link-company">
+                            <svg class="client-icon">
+                                <use href="./images/for-sprite/sprite.svg#icon-company-5"></use>
+                            </svg>
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
-                            <img src="./images/icons/client-6.svg" alt="Компанія №6" width="170">
+                    <li class="clients-company">
+                        <a href="#" class="link-company">
+                            <svg class="client-icon">
+                                <use href="./images/for-sprite/sprite.svg#icon-company-6"></use>
+                            </svg>
                         </a>
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
     </main>
     <footer class="footer-address">
         <div class="container footer-container">
