--- a/portfolio.html
+++ b/portfolio.html
@@ -197,47 +197,60 @@
         </section>
     </main>
     <footer class="footer-address">
-        <div class="container">
-            <a href="./index.html"><span class="logo">Web</span><span class="logo logo-third-part">Studio</span></a>
-            <address class="footer-list">
-                <ul>
-                    <li>
-                        <a class="footer-link" href="https://goo.gl/maps/sdtxkwDF94uDCL8M9" target="_blank"
-                            rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
+        <div class="container footer-container">
+            <div class="footer-left-part">
+                <a href="./index.html"><span class="logo">Web</span><span class="logo logo-third-part">Studio</span></a>
+                <address class="footer-list">
+                    <ul>
+                        <li>
+                            <a class="footer-link" href="https://goo.gl/maps/sdtxkwDF94uDCL8M9" target="_blank"
+                                rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
+                        </li>
+                        <li class="footer-contacts">
+                            <a class="footer-link footer-transparant"
+                                href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li class="footer-contacts">
+                            <a class="footer-link footer-transparant" href="tel:+380961111111">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-right-part">
+                <h2 class="join-link">
+                    Приєднуйтесь
+                </h2>
+                <ul class="flex-items box-media-footer">
+                    <li class="social-list-footer">
+                        <a href="#" class="link-networks-footer">
+                            <svg class="social-networks-footer">
+                                <use href="./images/for-sprite/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="footer-contacts">
-                        <a class="footer-link footer-transparant" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <li class="social-list-footer">
+                        <a href="#" class="link-networks-footer">
+                            <svg class="social-networks-footer">
+                                <use href="./images/for-sprite/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="footer-contacts">
-                        <a class="footer-link footer-transparant" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <li class="social-list-footer">
+                        <a href="#" class="link-networks-footer">
+                            <svg class="social-networks-footer">
+                                <use href="./images/for-sprite/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-footer">
+                        <a href="#" class="link-networks-footer">
+                            <svg class="social-networks-footer">
+                                <use href="./images/for-sprite/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
-            <!-- <h2 class="join-link">
-                Приєднуйтесь
-            </h2>
-            <ul class="flex-items">
-                <li class="social-list">
-                    <a href="#">
-                        <img src="./images/icons/social-network-footer-1.svg" alt="Посилання на Інстаграм" width="44">
-                    </a>
-                </li>
-                <li class="social-list">
-                    <a href="#">
-                        <img src="./images/icons/social-network-footer-2.svg" alt="Посилання на Твіттер" width="44">
-                    </a>
-                </li>
-                <li class="social-list">
-                    <a href="#">
-                        <img src="./images/icons/social-network-footer-3.svg" alt="Посилання на Фейсбук" width="44">
-                    </a>
-                </li>
-                <li class="social-list">
-                    <a href="#">
-                        <img src="./images/icons/social-network-footer-4.svg" alt="Посилання на Лінкедін" width="44">
-                    </a>
-                </li>
-            </ul> -->
+            </div>
         </div>
     </footer>
 </body>
