--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
                 </ul>
                 <ul class="flex-items project-items">
                     <li class="card-project">
-                        <a href="#">
+                        <a href="#" class="link-project">
                             <img src="./images/project-1.jpg" alt="Ноутбук з сайтом" width="370">
                             <div class="project-description">
                                 <h2 class="name-project">
@@ -89,7 +89,7 @@
                         </a>
                     </li>
                     <li class="card-project">
-                        <a href="#">
+                        <a href="#" class="link-project">
                             <img src="./images/project-2.jpg" alt="Постер баскетбольної команди" width="370">
                             <div class="project-description">
                                 <h2 class="name-project">
@@ -102,7 +102,7 @@
                         </a>
                     </li>
                     <li class="card-project">
-                        <a href="#">
+                        <a href="#" class="link-project">
                             <img src="./images/project-3.jpg" alt="Рибний ресторан" width="370">
                             <div class="project-description">
                                 <h2 class="name-project">
@@ -114,8 +114,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="card-project" i>
-                        <a href="#">
+                    <li class="card-project">
+                        <a href="#" class="link-project">
                             <img src="./images/project-4.jpg" alt="Навушники" width="370">
                             <div class="project-description">
                                 <h2 class="name-project">
@@ -128,7 +128,7 @@
                         </a>
                     </li>
                     <li class="card-project">
-                        <a href="#">
+                        <a href="#" class="link-project">
                             <img src="./images/project-5.jpg" alt="Дві коробки" width="370">
                             <div class="project-description">
                                 <h2 class="name-project">
@@ -141,7 +141,7 @@
                         </a>
                     </li>
                     <li class="card-project">
-                        <a href="#">
+                        <a href="#" class="link-project">
                             <img src="./images/project-6.jpg" alt="Монітор комп'ютера" width="370">
                             <div class="project-description">
                                 <h2 lang="en" class="name-project">
@@ -154,7 +154,7 @@
                         </a>
                     </li>
                     <li class="card-project">
-                        <a href="#">
+                        <a href="#" class="link-project">
                             <img src="./images/project-7.jpg" alt="Журнал" width="370">
                             <div class="project-description">
                                 <h2 class="name-project">
@@ -167,7 +167,7 @@
                         </a>
                     </li>
                     <li class="card-project">
-                        <a href="#">
+                        <a href="#" class="link-project">
                             <img src="./images/project-8.jpg" alt="Ярлик з брендом" width="370">
                             <div class="project-description">
                                 <h2 class="name-project">
@@ -180,7 +180,7 @@
                         </a>
                     </li>
                     <li class="card-project">
-                        <a href="#">
+                        <a href="#" class="link-project">
                             <img src="./images/project-9.jpg" alt="Ноутбук з рекламою" width="370">
                             <div class="project-description">
                                 <h2 lang="en" class="name-project">
