--- a/portfolio.html
+++ b/portfolio.html
@@ -33,10 +33,19 @@
             </nav>
             <ul class="list-address flex-items">
                 <li class="address-item mail">
-                    <a class="link-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="link-address" href="mailto:info@devstudio.com">
+                        <svg class="mail-icon">
+                            <use href="./images/for-sprite/sprite.svg#mail"></use>
+                        </svg>
+                        info@devstudio.com
+                    </a>
                 </li>
                 <li class="address-item">
-                    <a class="link-address" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="link-address" href="tel:+380961111111">
+                        <svg class="phone-icon">
+                            <use href="./images/for-sprite/sprite.svg#phone"></use>
+                        </svg>+38 096 111 11 11
+                    </a>
                 </li>
             </ul>
         </div>
